Signup screen without the cosmetic changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,18 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
             android:theme="@style/Base.Theme.AutoTradeTale"
+            android:exported="true">
+        </activity>
+
+        <!-- Declaration of SignUpActivity -->
+        <activity
+            android:name=".SignUpActivity"
             android:exported="true">
         </activity>
     </application>
